fixed spacing issues

--- a/src/sass/globals/_footer.scss
+++ b/src/sass/globals/_footer.scss
@@ -1,7 +1,8 @@
 footer {
     background-color: white;
     color: #000;
-    padding: 1.5em;
+    padding: 1em;
+    padding-inline: 1.5em;
 
     .social-links {
         display: flex;
