--- a/src/sass/globals/_header.scss
+++ b/src/sass/globals/_header.scss
@@ -5,6 +5,7 @@ header {
 
     h1 {
         font-size: 2rem;
+        margin-bottom: 1em;
         text-align: center;
     }
 
